syntax = "proto3";

package greet;

message Greeting{
    string first_name =1;
    string last_name =2;
}
  

message GreetRequest{
    Greeting greet =1;
}

message GreetResponse {
    string result =1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result=1;
}

message LongGreetRequest {
    Greeting greet =1;
}

message LongGreetResponse {
    string result =1;
}

message GreetEveryoneRequest {
    Greeting greet = 1;
}

message GreetEveryoneResponse {
    string result= 1;
}

service GreetService {
    //unary Api
    rpc greet (GreetRequest) returns (GreetResponse);
    //streaming api
    rpc greetManyTimes (GreetManyTimesRequest) returns ( stream GreetManyTimesResponse);
    //Client streaming
    rpc longGreet(stream LongGreetRequest)returns( stream LongGreetResponse);
    //bi di streaming
    rpc greetEveryone(stream GreetEveryoneRequest)returns(stream GreetEveryoneResponse);
    
    //error handling
    //write more about 
    // this rpc will throw an expection if the sent number is negative: -1
    rpc squareRoot (SquareRootRequest) returns (SquareRootResponse);
    

}

message SquareRootRequest {
    int32 number=1;
}

message SquareRootResponse {

    double number_root =1;
}